# ict_trading

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: backtest-report.md  strategy-from-transcript.md
Data/prep/: .gitignore  README.md  append_new_days.py  databento_get_data_batch.py  ind_contracts_to_continuous.py  requirements.txt  set_env_variables.py  zst_to_csv_conversion.py
analysis/: README.md
analysis/daily-bias/: model-2022-daily-bias-2026-06-13.md
analysis/dxy-weekly-bias/: currency-merchant-dxy-weekly-bias-plan-2026-06-14.md
backtests/: compare_runs.py  daily_bias_accuracy.py  daily_bias_grid_search.py  fvg_sweep_backtest.py  grid_search.py  plot_trades.py
charts/: README.md  chart_dxy_bag.py  chart_dxy_dark_pool.py  chart_dxy_mss.py  chart_dxy_swing_classification.py  chart_mss_type2.py  chart_ob.py  chart_ob_liquidity_compare.py
configs/: README.md
configs/model_2022/: baseline.yaml  bias_4h_hard.yaml  bias_4h_soft.yaml  london_only.yaml  pdh_pdl_chicago.yaml  pdh_pdl_chicago_reh.yaml  pdh_pdl_only.yaml  with_bias.yaml
examples/: README.md  daily_bias_example.py  plot_failure_swing.py  plot_rejection_block.py  swing_points_example.py
knowledge/currency-merchant/: README.md
knowledge/ict/: README.md
knowledge/romeo/: README.md
legacy/: README.md
scripts/: CHARTING.md  fetch_dxy.py  lineage.py  print_daily_bars.py
src/ict/: __init__.py  registry.py
tests/: test_detectors_smoke.py  test_pool_validity.py  test_registry_coverage.py
tests/fixtures/: nq_sample.csv
trading_models/: read_data.py  requirements.txt
(+125 files in other folders)
